# job-tinder-pwa

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
apps/api/: .env.example  README.md  alembic.ini  auth.py  config.py  database.py  main.py  pyproject.toml  requirements.txt  seed.py  test_auth.py  test_offerer.py  test_questionnaire.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2284e7a9b8e5_initial_schema_with_all_core_models.py  5ce988c23120_initial_migration_add_all_tables.py  6c878fbde540_initial_schema_with_auth.py  d7bae3fa8483_add_offerer_role_config_and_swipe_note.py
apps/api/models/: __init__.py  offerer.py  offerer_role_config.py  questionnaire.py  seeker.py  seeker_profile.py  shortlist.py  swipe.py  swipe_decision.py  user.py
apps/api/routes/: auth.py  offerer.py  questionnaire.py  seeker.py
apps/api/schemas/: __init__.py  auth.py  offerer.py  questionnaire.py  seeker.py
apps/api/services/: scoring.py
apps/api/tests/: test_scoring.py
apps/web/: package-lock.json  package.json
apps/web/public/: icon-192.png.txt  icon-512.png.txt  manifest.json  sw.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx  service-worker-registration.tsx
apps/web/src/app/auth/login/: page.tsx
apps/web/src/app/auth/register/: page.tsx
apps/web/src/app/offerer/feed/: page.tsx
apps/web/src/app/offerer/role-select/: page.tsx
apps/web/src/app/seeker/profile/: page.tsx
apps/web/src/components/: CandidateCard.tsx
apps/web/src/lib/: api.ts  auth-context.tsx  protected-route.tsx
docs/: api.md  decision-log.md  prompts.md
(+3 files in other folders)
